# anki-geo-trainer

./: .gitignore  .npmrc  AGENTS.md  Makefile  PLAN.md  README.md  package-lock.json  package.json  playwright.config.mjs  pyproject.toml
.claude/: launch.json
anki/shared/: card.css
backups/live-imports/: 20260724-contextual-sketch-rollout.md
backups/live-imports/20260724T150455-0700-before/: cards-info.json  delete-empty-decks-request.json  delete-empty-decks-response.json  identity.json  move-request.json  move-response.json  notes-info.json
backups/live-imports/20260724T150959-0700-after/: identity.json  original-cards-info.json  original-notes-info.json
curriculum/: CURRICULUM.md
data/: SOURCES.md
data/bundles/: africa-countries-capitals.json  africa-countries-shapes.json  africa-countries.json  argentina-provinces-capitals.json  argentina-provinces-shapes.json  argentina-provinces.json  asia-countries-capitals.json  asia-countries-shapes.json  asia-countries.json  australia-states-capitals.json  australia-states-shapes.json  australia-states.json  brazil-states-capitals.json  brazil-states-shapes.json  brazil-states.json  canada-provinces-capitals.json  canada-provinces-shapes.json  canada-provinces.json  china-provinces-capitals.json  china-provinces-shapes.json  china-provinces.json  continents-shapes.json  continents.json  europe-countries-capitals.json  europe-countries-shapes.json  europe-countries.json  india-states-capitals.json  india-states-shapes.json  india-states.json  indonesia-provinces-capitals.json  indonesia-provinces-shapes.json  indonesia-provinces.json  mexico-states-capitals.json  mexico-states-shapes.json  mexico-states.json  north-america-countries-capitals.json  north-america-countries-shapes.json  north-america-countries.json  oceania-countries-capitals.json  oceania-countries-shapes.json  (+24 more)
dev/: harness.html
engine/: geo-engine.js
release/: RELEASE.md  ankiweb.md
scripts/: build_apkg.py  build_bundle.py  capture_screenshots.mjs  droid_cdp.py  droid_ui.py  emit_card_fixture.py  f4_spike.py
tests/: draw.spec.mjs  europe.spec.mjs  geo-engine.spec.mjs  rendered-card.spec.mjs  scopes.spec.mjs  sketch.spec.mjs  state-helper.mjs
