[project]
name = "anki-geo-trainer"
version = "0.0.1"
description = "Sheppard-Software-style interactive geography task decks for Anki"
requires-python = ">=3.11"
dependencies = [
    "shapely>=2.0",
    "genanki>=0.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pyflakes (undefined names, unused imports) + pycodestyle + isort + bugbear +
# comprehension/upgrade lints. Practical, low-noise static analysis.
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]  # line length handled by the formatter, not enforced hard

[tool.uv]
exclude-newer = "2026-06-28T00:00:00Z"

[tool.uv.pip]
exclude-newer = "2026-06-28T00:00:00Z"

[tool.anki-addon-workbench]
project_name = "GeoTrainer"
seed_apkgs = [
    "dist/geo-trainer-us-states.apkg",
    "dist/geo-trainer-europe.apkg",
    "dist/geo-trainer-south-america.apkg",
    "dist/geo-trainer-africa.apkg",
    "dist/geo-trainer-asia.apkg",
    "dist/geo-trainer-brazil-states.apkg",
    "dist/geo-trainer-india-states.apkg",
    "dist/geo-trainer-russia-subjects.apkg",
    "dist/geo-trainer-china-provinces.apkg",
    "dist/geo-trainer-canada-provinces.apkg",
    "dist/geo-trainer-australia-states.apkg",
    "dist/geo-trainer-argentina-provinces.apkg",
    "dist/geo-trainer-mexico-states.apkg",
    "dist/geo-trainer-indonesia-provinces.apkg",
    "dist/geo-trainer-oceania.apkg",
    "dist/geo-trainer-world-seas.apkg",
    "dist/geo-trainer-world-rivers.apkg",
]
anki_version = "25.09"
docker_image = "anki-geo-trainer-workbench"
docker_workbench_spec = "anki-addon-workbench[gui]==0.4.1"
deck_smoke_render_limit = 3
